Agregados mixins y operadores SASS para el padding

--- a/css/style.css
+++ b/css/style.css
@@ -1,354 +1,345 @@
-/* Colores */
-/* Fuentes */
-/* Colores backgrounds */
 @font-face {
-  font-family: Stinger;
-  src: url(../fonts/StingerFitTrial-Bold.ttf);
+    font-family: Stinger;
+    src: url(../fonts/StingerFitTrial-Bold.ttf);
 }
 @font-face {
-  font-family: Nexa;
-  src: url(../fonts/Nexa\ Light.otf);
+    font-family: Nexa;
+    src: url(../fonts/Nexa\ Light.otf);
 }
 @font-face {
-  font-family: NexaBold;
-  src: url(../fonts/Nexa\ Bold.otf);
+    font-family: NexaBold;
+    src: url(../fonts/Nexa\ Bold.otf);
 }
+
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 header {
-  background-color: #212322;
-  font-family: Stinger;
-  font-size: larger;
+    background-color: #212322;
+    font-family: Stinger;
+    font-size: larger;
 }
-
 .nav-link {
-  color: #FFC72C;
+    color: #ffc72c;
 }
 .nav-link:hover {
-  color: white;
+    color: white;
 }
-
 .navbar-toggler-icon {
-  background-color: #FFC72C;
+    background-color: #ffc72c;
 }
-
 #delivery {
-  background-color: #FFC72C;
-  margin: 0px;
-  border-radius: 5px;
+    background-color: #ffc72c;
+    margin: 0px;
+    border-radius: 5px;
 }
 #delivery a {
-  color: #212322;
+    color: #212322;
 }
 #delivery a:hover {
-  background-color: white;
-  border-radius: 5px;
+    background-color: white;
+    border-radius: 5px;
 }
-
 footer {
-  width: 100%;
-  background-color: #212322;
-  color: #FFC72C;
-  text-align: center;
-  z-index: 1;
-  padding: 15px 0;
+    width: 100%;
+    background-color: #212322;
+    color: #ffc72c;
+    text-align: center;
+    z-index: 1;
+    padding: 10px 0;
 }
 footer .text-center {
-  color: #FFC72C;
-  font-family: NexaBold;
-  font-size: larger;
+    color: #ffc72c;
+    font-family: NexaBold;
+    font-size: larger;
 }
-
 .btn {
-  background-color: #FFC72C;
-  border-color: #FFC72C;
-  color: #212322;
+    background-color: #ffc72c;
+    border-color: #ffc72c;
+    color: #212322;
 }
 .btn a {
-  color: #212322;
+    color: #212322;
 }
 .btn:hover {
-  background-color: white;
-  color: #212322;
+    background-color: white;
+    color: #212322;
 }
-
 body {
-  background-color: #ECB3CB;
+    background-color: #ecb3cb;
 }
-
 #nuestros-sabores {
-  background-color: #ECB3CB;
-  text-align: center;
-  color: black;
-  font-size: 35px;
-  text-shadow: 0 0 2px white;
-  margin-bottom: 0;
-  font-family: Stinger;
-  padding-top: 15px;
+    background-color: #ecb3cb;
+    text-align: center;
+    color: black;
+    font-size: 35px;
+    text-shadow: 0 0 2px white;
+    margin-bottom: 0;
+    font-family: Stinger;
+    padding-top: 20px;
 }
-
 .galeria {
-  background-color: #ECB3CB;
-  height: auto;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(12, 150px);
-  padding: 15px;
-  grid-gap: 15px;
+    background-color: #ecb3cb;
+    height: auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(12, 150px);
+    padding: 15px;
+    grid-gap: 15px;
 }
-
 .carta {
-  background-color: #212322;
-  color: #FFC72C;
-  border-radius: 5px;
-  text-align: center;
-  font-family: NexaBold;
+    background-color: #212322;
+    color: #ffc72c;
+    border-radius: 5px;
+    text-align: center;
+    font-family: NexaBold;
 }
 .carta p {
-  margin: 5px;
+    margin: 5px;
 }
 .carta h4 {
-  margin: 5px;
+    margin: 5px;
 }
-
 .item {
-  border: 3px solid #212322;
-  background-size: cover;
-  background-position: center;
-  border-radius: 5px;
-  height: 90%;
-  filter: grayscale(100%);
-  transition: all 0.9s;
+    border: 3px solid #212322;
+    background-size: cover;
+    background-position: center;
+    border-radius: 5px;
+    height: 90%;
+    filter: grayscale(100%);
+    transition: all 0.9s;
 }
 .item:hover {
-  transform: scale(1.04);
-  filter: grayscale(0%);
+    transform: scale(1.04);
+    filter: grayscale(0%);
 }
-
 .item1 {
-  background-image: url(../img/berenjena.jpg);
+    background-image: url(../img/berenjena.jpg);
 }
-
 .item2 {
-  background-image: url(../img/bondio.jpg);
+    background-image: url(../img/bondio.jpg);
 }
-
 .item3 {
-  background-image: url(../img/calabaza.jpg);
+    background-image: url(../img/calabaza.jpg);
 }
-
 .item4 {
-  background-image: url(../img/caprese.jpg);
+    background-image: url(../img/caprese.jpg);
 }
-
 .item5 {
-  background-image: url(../img/carnemalbec.jpg);
+    background-image: url(../img/carnemalbec.jpg);
 }
-
 .item6 {
-  background-image: url(../img/carnemorron.jpg);
+    background-image: url(../img/carnemorron.jpg);
 }
-
 .item7 {
-  background-image: url(../img/humita.jpg);
+    background-image: url(../img/humita.jpg);
 }
-
 .item8 {
-  background-image: url(../img/jamonqueso.jpg);
+    background-image: url(../img/jamonqueso.jpg);
 }
-
 .item9 {
-  background-image: url(../img/pirok.jpg);
+    background-image: url(../img/pirok.jpg);
 }
-
 .item10 {
-  background-image: url(../img/polloverderoque.jpg);
+    background-image: url(../img/polloverderoque.jpg);
 }
-
 .item11 {
-  background-image: url(../img/roquecebo.jpg);
+    background-image: url(../img/roquecebo.jpg);
 }
-
 .item12 {
-  background-image: url(../img/teriyaki.jpg);
+    background-image: url(../img/teriyaki.jpg);
 }
-
-.index {
-  text-align: center;
-  padding: 20px;
-  font-family: Nexa;
-  font-weight: bolder;
-}
-.index h1,h2 {
-  font-family: Stinger;
-}
-
 .row {
-  padding-bottom: 20px;
+    padding-bottom: 20px;
 }
-
 .mainnietos {
-  background-color: #ECB3CB;
-  background-position: center;
-  height: 100vh;
+    background-color: #ecb3cb;
+    background-position: center;
+    height: 100vh;
 }
 .mainnietos h1 {
-  text-align: center;
-  font-family: Stinger;
-  padding: 20px;
+    text-align: center;
+    font-family: Stinger;
+    padding: 20px;
 }
-
+.mainnietos h2 {
+    text-align: center;
+    font-family: Stinger;
+    padding: 20px;
+}
 .gotodelivery {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .gotodelivery h2 {
-  text-align: center;
-  font-family: Stinger;
+    text-align: center;
+    font-family: Stinger;
 }
 .gotodelivery a {
-  text-decoration: none;
-  background-color: #FFC72C;
-  color: #212322;
-  padding: 25px;
-  font-size: larger;
-  border-radius: 10px;
-  margin-top: 20px;
-  font-family: NexaBold;
-  display: inline-block;
+    text-decoration: none;
+    background-color: #ffc72c;
+    color: #212322;
+    padding: 25px;
+    font-size: larger;
+    border-radius: 10px;
+    margin-top: 20px;
+    font-family: NexaBold;
+    display: inline-block;
 }
-
 .carousel-inner {
-  height: 70vh;
+    height: 70vh;
 }
-
 .contacto {
-  height: 90vh;
-  padding: 50px;
-  text-align: center;
-  font-family: Stinger;
-  color: #FA4616;
+    height: 90vh;
+    padding: 50px;
+    text-align: center;
+    font-family: Stinger;
+    color: #fa4616;
 }
 .contacto form {
-  font-family: NexaBold;
+    font-family: NexaBold;
 }
-
 #contactbtn {
-  background-color: #212322;
-  color: #FFC72C;
+    background-color: #212322;
+    color: #ffc72c;
 }
 #contactbtn:hover {
-  background-color: white;
-  color: #212322;
+    background-color: white;
+    color: #212322;
 }
-
 #contactbtncv {
-  background-color: #212322;
-  color: #FFC72C;
+    background-color: #212322;
+    color: #ffc72c;
 }
 #contactbtncv:hover {
-  background-color: white;
-  color: #212322;
+    background-color: white;
+    color: #212322;
 }
-
 .delivery {
-  text-align: center;
-  padding: 20px;
-  font-family: NexaBold;
+    text-align: center;
+    padding: 20px;
+    font-family: NexaBold;
 }
 .delivery h1 {
-  font-family: Stinger;
+    font-family: Stinger;
 }
-
 .deliverybot {
-  padding: 20px;
+    padding: 20px;
 }
 .deliverybot a {
-  padding: 15px;
+    padding: 15px;
 }
-
 #imgdelivery {
-  width: 100%;
+    width: 100%;
 }
-
 #deliverylogo {
-  width: 100%;
+    width: 100%;
 }
-
 #leftcol {
-  margin-bottom: 37px;
+    margin-bottom: 37px;
 }
-
 @media only screen and (max-width: 767px) {
-  .item {
-    filter: none;
-  }
-  .contacto {
-    height: fit-content;
-    padding: 10px;
-    font-size: smaller;
-  }
+    .item {
+	filter: none;
+    }
+    .contacto {
+	height: fit-content;
+	padding: 10px;
+	font-size: smaller;
+    }
 }
 @media only screen and (min-width: 200px) {
-  h4 {
-    font-size: small;
-  }
-  #myCarousel {
-    height: 20vh;
-  }
+    h4 {
+	font-size: small;
+    }
+    #myCarousel {
+	height: 20vh;
+    }
 }
 @media only screen and (min-width: 480px) {
-  .galeria {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(6, 150px);
-  }
-  #myCarousel {
-    height: 35vh;
-  }
+    .galeria {
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: repeat(6, 150px);
+    }
+    #myCarousel {
+	height: 35vh;
+    }
 }
 @media only screen and (min-width: 768px) {
-  .galeria {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(4, 230px);
-  }
-  #myCarousel {
-    height: 45vh;
-  }
+    .galeria {
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: repeat(4, 230px);
+    }
+    #myCarousel {
+	height: 45vh;
+    }
 }
 @media only screen and (min-width: 1200px) {
-  .galeria {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: repeat(3, 350px);
-  }
-  h4 {
-    font-size: large;
-  }
-  #myCarousel {
-    height: 65vh;
-  }
+    .galeria {
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-rows: repeat(3, 350px);
+    }
+    h4 {
+	font-size: large;
+    }
+    #myCarousel {
+	height: 65vh;
+    }
 }
 @media only screen and (min-width: 1600px) {
-  .galeria {
-    grid-template-columns: 2fr 2fr 2fr 2fr;
-    grid-template-rows: repeat(3, 500px);
-  }
-  h4 {
-    font-size: larger;
-  }
-  #myCarousel {
-    height: 60vh;
-  }
+    .galeria {
+	grid-template-columns: 2fr 2fr 2fr 2fr;
+	grid-template-rows: repeat(3, 500px);
+    }
+    h4 {
+	font-size: larger;
+    }
+    #myCarousel {
+	height: 60vh;
+    }
 }
 @media only screen and (min-width: 992px) {
-  .delivery {
-    padding: 60px;
-  }
+    .delivery {
+	padding: 60px;
+    }
 }
-
-/*# sourceMappingURL=style.css.map */
+.background-container {
+    position: relative;
+    height: 100vh;
+    /* 100% of the viewport height */
+}
+.background-image {
+    position: absolute;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    opacity: 80%;
+}
+#image1 {
+    background-image: url(./img/imgp1.jpg);
+}
+#image2 {
+    background-image: url(./img/imgp2.jpg);
+}
+.indexmain h1 {
+    z-index: 1;
+}
+.index {
+    text-align: center;
+    padding: 20px;
+    font-family: Nexa;
+    font-weight: bolder;
+}
+.index h3 {
+    font-family: Stinger;
+}
+.row {
+    padding-bottom: 20px;
+}
